--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <style>
+    <!-- <style>
       section {
         padding: 60px 0;
       }
-    </style>
+    </style> -->
   </head>
   <body>
     <!-- navbar -->
@@ -71,7 +71,7 @@
     <!-- ========== xxxxx =========== -->
 
     <!-- main image & intro text -->
-    <section id="intro">
+    <section id="intro" class="py-5">
       <div class="container-lg">
         <div class="row justify-content-center align-items-center">
           <div class="col-md-5 text-center text-md-start">
@@ -113,13 +113,13 @@
     <!-- ========== xxxxx =========== -->
 
     <!-- Pricing Plans -->
-    <section id="pricing" class="bg-light mt-5">
+    <section id="pricing" class="bg-light mt-5 py-5">
       <div class="container-lg">
         <div class="text-center">
           <h2>Pricing Plans</h2>
           <p class="lead text-muted">Choose a pricing plan to suit you</p>
         </div>
-        <div class="row my-5 align-items-center justify-content-center g-0">
+        <div class="row my-5 align-items-center justify-content-center g-4">
           <!-- card-1 -->
           <div class="col-8 col-lg-4 col-xl-3">
             <div class="card border-0">
@@ -140,7 +140,7 @@
 
           <!-- card-2 -->
           <div class="col-9 col-lg-4">
-            <div class="card border-primary border-2">
+            <div class="card border-primary border-1">
               <div class="card-header text-center text-primary">
                 Most Popular
               </div>
@@ -183,7 +183,7 @@
     <!-- ========== xxxxx =========== -->
 
     <!-- topics at a glance -->
-    <section id="topics">
+    <section id="topics" class="py-5">
       <div class="container-md">
         <div class="text-center">
           <h2>Inside the Book...</h2>
@@ -384,7 +384,7 @@
     <!-- ========== xxxxx =========== -->
 
     <!-- reviews list -->
-    <section id="reviews" class="bg-light">
+    <section id="reviews" class="bg-light py-5">
       <div class="container-lg">
         <div class="text-center">
           <h2><i class="bi bi-stars"></i> Book Reviews</h2>
@@ -471,7 +471,7 @@
 
     <!-- contact form -->
     <!-- form-control, form-label, form-select, input-group, input-group-text -->
-    <section id="contact">
+    <section id="contact" class="py-5">
       <div class="container-lg">
         <div class="text-center">
           <h2>Get in Touch</h2>
@@ -575,7 +575,7 @@
     <!-- ========== xxxxx =========== -->
 
     <!-- get updates / modal trigger -->
-    <section class="bg-light">
+    <section class="bg-light py-5">
       <div class="container">
         <div class="text-center">
           <h2>Stay in the loop</h2>
